syntax = "proto3";

option java_package = "io.github.setchy.dgs.formatters.protobuf";
option java_outer_classname = "OpaqueResourceIDProto";

message OpaqueResourceID {
  string domain = 1;
  string subdomain = 2;
  string systemName = 3;
  string systemID = 4;
}
